codex-rs/tui2/src/snapshots/codex_tui2__pager_overlay__tests__static_overlay_snapshot_basic.snap
---
source: tui2/src/pager_overlay.rs
expression: term.backend()
---
"/ S T A T I C / / / / / / / / / / / / / "
"one                                     "
"two                                     "
# tui2/src/snapshots/codex_tui2__pager_overlay__tests__static_overlay_snapshot_basic.snap
"three                                   "
"~                                       "
"~                                       "
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q to quit                              "
"                                        "
