codex-rs/tui2/src/snapshots/codex_tui2__pager_overlay__tests__transcript_overlay_snapshot_basic.snap
---
source: tui2/src/pager_overlay.rs
expression: term.backend()
---
"/ T R A N S C R I P T / / / / / / / / / "
"alpha                                   "
"                                        "
# tui2/src/snapshots/codex_tui2__pager_overlay__tests__transcript_overlay_snapshot_basic.snap
"beta                                    "
"                                        "
"gamma                                   "
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q to quit   esc to edit prev           "
"                                        "
